@@ -1,5 +1,7 @@
 2008.06.21 oubiwann
 
+* Removed old, unused publisher (we're using Twisted to publish data to the
+web).
 * Updated TODO.
 * Updated the sample config to have two service groups.
 * Updated the docs for the web api.
